Fix issue where bar was the wrong color on the Home page Add a check for the action filter methods so that error messages aren't generated when the input is empty.

--- a/app/css/app.css
+++ b/app/css/app.css
@@ -383,6 +383,7 @@ tr {
   position: relative;
   left: 200px;
   top: 61px;
+  z-index: 1;
 }
 
 .brand-bar-charts {
